# voz_scraper

./: .gitignore  README.md  config.py  pyproject.toml
src/: __init__.py  cli.py  crawler.py  exporters.py  http_client.py  models.py  parsers.py  store.py
